--- a/styles/style.css
+++ b/styles/style.css
@@ -13,9 +13,8 @@
 }
 
 .header__links-list {
-    min-width: 388px;
     display: flex;
-    justify-content: space-between;
+    gap: 33px;
     list-style: circle;
 }
 
@@ -64,4 +63,137 @@
 .addres__location {
     max-width: 240px;
     border: 0;
+}
+
+/* .cover {
+    display: flex;
+    align-items: center;
+    min-height: 757px;
+    background-image: url(../images/cover.jpg);
+    background-size: cover;
+}
+
+.cover__title {
+    position: relative;
+    top: 165px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #FFF;
+    font-size: 100px;
+    font-weight: 700;
+    line-height: 115%;
+    letter-spacing: 60px;
+    text-transform: uppercase; 
+}
+
+.cover__overlay {
+    width: 100%;
+    min-height: 757px;
+    background-color: rgb(000, 000, 000, 0.6);
+}
+
+.cover__title-first-word {
+    align-self: flex-start;
+}
+.cover__title-two-word {
+    align-self: center;
+}
+.cover__title-three-word {
+    align-self: flex-end;
+    
+} */
+
+ .overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(000, 000, 000, 0.6);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+} 
+
+.lots {
+    margin: 0 auto;
+    max-width: 1340px;
+    min-height: 450px;
+}
+
+
+.lots__heading {
+    color: #000;
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase; 
+    margin: 0 0 25px 40px;
+}  
+
+.lots__card-list {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    margin-bottom: 30px;
+}
+
+.lots__card-list-item {
+    position: relative;
+    width: 430px;
+    height: 450px;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 50px 40px 50px 40px;
+}
+
+
+.card_type_film {
+    background-image: url(../images/card-lot-01.jpg);
+} 
+
+.card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+    background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+    color: #FFF;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 120%;
+    z-index: 1;
+    
+}
+
+.card-link {
+    text-transform: uppercase;
+    text-decoration-line: underline;
+}
+
+.card__text {
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 120%; 
+    z-index: 1;
+}
+
+.lots__look-more-link {
+    color: #000;
+    font-size: 20px;
+    font-weight: 400; 
+    margin-left: 40px;
+    text-decoration: none;
+    border-bottom: 1px solid black;
+    
 }
