--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,7 @@ body {
   min-width: 1100px;
   margin: 0;
   font-family: Raleway, sans-serif;
-  background-color: rgb(150, 150, 246);
+  /* background-color: rgb(150, 150, 246); */
 }
 
 h1,
