--- a/styles/style.css
+++ b/styles/style.css
@@ -27,10 +27,10 @@
     color: #000;
     font-size: 18px;
     font-weight: 400;
-    line-height: normal;    
+    line-height: 1.2;    
 }
 
-.header_link_active {
+.link_active {
     border-bottom: 1px solid black;
 }
 
@@ -65,46 +65,6 @@
     border: 0;
 }
 
-/* .cover {
-    display: flex;
-    align-items: center;
-    min-height: 757px;
-    background-image: url(../images/cover.jpg);
-    background-size: cover;
-}
-
-.cover__title {
-    position: relative;
-    top: 165px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: #FFF;
-    font-size: 100px;
-    font-weight: 700;
-    line-height: 115%;
-    letter-spacing: 60px;
-    text-transform: uppercase; 
-}
-
-.cover__overlay {
-    width: 100%;
-    min-height: 757px;
-    background-color: rgb(000, 000, 000, 0.6);
-}
-
-.cover__title-first-word {
-    align-self: flex-start;
-}
-.cover__title-two-word {
-    align-self: center;
-}
-.cover__title-three-word {
-    align-self: flex-end;
-    
-} */
-
  .overlay {
     width: 100%;
     height: 100%;
@@ -116,15 +76,14 @@
     position: absolute;
 } 
 
+
 .lots {
-    margin: 0 auto;
+    margin: 0 auto 191px auto;
     max-width: 1340px;
     min-height: 450px;
 }
 
-
 .lots__heading {
-    color: #000;
     font-size: 40px;
     font-weight: 700;
     text-transform: uppercase; 
@@ -189,11 +148,108 @@
 }
 
 .lots__look-more-link {
-    color: #000;
     font-size: 20px;
     font-weight: 400; 
     margin-left: 40px;
     text-decoration: none;
     border-bottom: 1px solid black;
-    
+}
+
+
+.about {
+    margin: 0 auto 180px auto;
+    max-width: 1340px;
+    min-height: 487px;
+    display: flex;
+    justify-content: space-between;
+    gap: 25px;
+}
+
+.about__column {
+    min-width: 430px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.about__logo {
+    width: 240px;
+    height: 240px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: #000;
+}
+
+.about__logo-image {
+    width: 148px;
+    height: 114px;
+}
+
+.about__column-text {
+    max-width: 885px;
+    align-self: flex-end;
+}
+
+.about__title {
+    margin-bottom: 100px;
+    color: #000;
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase; 
+}
+
+.about__text {
+    font-family: Raleway;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.2; 
+}
+
+.about__text-list {
+    list-style-type: none;
+}
+
+.about__text-list-item {
+    margin-bottom: 25px;
+}
+
+.about__text-list-item:last-of-type {
+    margin: 0;
+}
+
+.footer {
+    margin: 0 auto 90px auto;
+    max-width: 1340px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__menu-list {
+    list-style-type: none;
+    text-align: center;
+}
+
+.footer__menu-link {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.2;
+    text-decoration: none;
+}
+
+.footer__social-list {
+    list-style-type: none;
+    display: flex;
+    gap: 48px;
+}
+
+.footer__social-link {
+    text-decoration: none;
+}
+
+.footer__social-icon {
+    width: 48px;
+    height: 48px;
 }
