--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,8 @@
 }
 /* Стили header */
 .header {
-    margin: 92px 49px 92px 51px;
+    margin: 0 52px 0 49px;
+    padding: 92px 0 92px 0;
     max-width: 1340px;
     display: flex;
     justify-content: space-between;
@@ -68,7 +69,6 @@
 /* Блок секция cover*/
 .cover {
     position: relative;
-    margin-bottom: 180px;
     width: 100%;
     min-height: 757px;
     background-image: url(../images/cover.jpg);
@@ -167,7 +167,8 @@
 
 /* Блок секция lots  */
 .lots {
-    margin: 0 auto 191px auto;
+    margin: 0 auto;
+    padding: 180px 0 180px 0;
     max-width: 1340px;
     min-height: 450px;
 }
@@ -247,7 +248,7 @@
 
 /* Блок секция about */
 .about {
-    margin: 0 auto 180px auto;
+    margin: 0 auto;
     max-width: 1340px;
     min-height: 487px;
     display: flex;
@@ -311,7 +312,8 @@
 
 /* Блок секция footer */
 .footer {
-    margin: 0 auto 90px auto;
+    margin: 0 auto;
+    padding: 180px 0 90px 0;
     max-width: 1340px;
     display: flex;
     justify-content: space-between;
