--- a/styles/style.css
+++ b/styles/style.css
@@ -2,23 +2,24 @@
     margin: 0 auto;
     max-width: 1440px;
 }
-/* Стили header */
+
+/* Для выравнивания по Pixel-P пришлось изменить padding, отличается от размеров в FIGMA */
 .header {
-    margin: 0 52px 0 49px;
-    padding: 92px 0 92px 0;
+    margin: 0 auto;
+    padding: 92px 0 96px 0;
     max-width: 1340px;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     align-items: center;
 }
 
 .header__links-list {
     list-style: circle;
     display: flex;
-    gap: 33px; 
+    gap: 33px;
 }
 
-.header__links-list-item:first-of-type {
+.header__links_no-circle {
     list-style: none;
 }
 
@@ -27,43 +28,62 @@
     color: #000;
     font-size: 18px;
     font-weight: 400;
-    line-height: 1.2;
+    line-height: 120%;
+    transition: all 0.2s;
 }
 
-.link_active {
-    border-bottom: 1px solid black;
+.header__link:hover {
+    opacity: 0.4;
 }
 
-/* Логотип позицианирован относительно себя */
+.link-active {
+    border-bottom: 1px solid currentColor;
+}
+
+
+
+
 .header__logo {
+    margin: 0 auto;
     display: block;
     background-image: url(../images/logo-black.svg);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 145px;
+    width: 140px;
     height: 105px;
-    position: relative;
-    right: 70px;
 }
 
 /* Секция с адрессом */
 .address {
     display: flex;
     flex-direction: column;
+    font-style: normal;
 }
 
-.addres__link {
+
+.address_place-header {
+    margin-left: auto;
+}
+
+.address__link {
     width: max-content;
     font-size: 18px;
     font-weight: 400;
-    line-height: 24.3px;
+    line-height: 130%;
     text-decoration: none;
     border-bottom: 1px solid black;
+    transition: all 0.2s;
 }
 
-.addres__location {
+.address__link:hover {
+    opacity: 0.5;
+}
+
+.address__location {
     max-width: 240px;
     border: 0;
+    font-size: 18px;
+    line-height: 24.3px;
 }
 
 /* Блок секция cover*/
@@ -79,45 +99,53 @@
 
 
 .cover__title {
-    padding: 165px 0 130px 0;
+    padding: 165px 0 120px 0;
     margin: 0 auto;
     max-width: 1340px;
     display: flex;
     flex-direction: column;
-}
-
-
-.cover__letter {
     color: #FFF;
     font-size: 100px;
-    letter-spacing: 25px;
     font-weight: 700;
-    line-height: 120%;
+    line-height: 123%;
     text-transform: uppercase;
 }
 
 .aligned-text {
-    align-self: self-start;
+    display: block;
+    width: 100%;
+    text-align: left;
+    z-index: 1;
 }
 
 .aligned-text_center {
-    align-self: center;
-    margin-left: -65px;
- 
+    display: block;
+    width: 100%;
+    text-align: center;
+    z-index: 2;
 }
-
 
 .aligned-text_right {
-    align-self: self-end;
+    display: block;
+    width: 100%;
+    text-align: right;
+    z-index: 3;
 }
 
-.letter-spasing-extended {
-    letter-spacing: 50px;
+
+.letter-spacing-extended {
+    letter-spacing: 60px;
 }
 
 .no-letter-spacing {
-    letter-spacing: 0px;
+    letter-spacing: 0;
 }
+
+.letter-spacing-for-all {
+    letter-spacing: 30px;
+}
+
+
 
 .cover__description {
     margin: 0 auto;
@@ -126,6 +154,7 @@
     justify-content: flex-end;
     align-items: center;
     gap: 78px;
+
 }
 
 .cover__description-text {
@@ -136,6 +165,7 @@
     line-height: 28px;
     text-transform: uppercase;
     word-spacing: 18px;
+    z-index: 4;
 }
 
 .bet-button {
@@ -149,8 +179,15 @@
     margin: 0;
     width: 257px;
     height: 52px;
-    border: 1px solid white;
+    border: 1px solid currentColor;
     background-color: rgba(255, 255, 255, 0);
+    z-index: 5;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.bet-button:hover {
+    opacity: 0.6;
 }
 
 /* Оверлэй один для двух блоков */
@@ -170,30 +207,38 @@
     margin: 0 auto;
     padding: 180px 0 180px 0;
     max-width: 1340px;
-    min-height: 450px;
 }
 
+/* Для выравнивания по Pixel-P пришлось изменить margin, отличается от размеров в FIGMA */
 .lots__heading {
     font-size: 40px;
     font-weight: 700;
     text-transform: uppercase;
-    margin: 0 0 25px 40px;
+    margin: 0 0 28px 40px;
 }
 
+/* Для выравнивания по Pixel-P пришлось изменить margin-bottom, отличается от размеров в FIGMA */
 .lots__card-list {
-    margin-bottom: 30px;
+    margin-bottom: 31px;
     list-style-type: none;
     display: flex;
     flex-wrap: wrap;
     gap: 25px;
-    
 }
+
+
+.lots__card-list-item {
+    flex-basis: 430px;
+    min-height: 450px;
+    flex-grow: 1;
+}
+
 
 .lots__card {
     position: relative;
-    width: 430px;
-    height: 450px;
-    flex-shrink: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -201,40 +246,48 @@
     background-position: center;
     background-repeat: no-repeat;
     padding: 50px 40px 50px 40px;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.lots__card:hover {
+    opacity: 0.8;
 }
 
 
-.card_type_film {
+
+.lots__card_type_film {
     background-image: url(../images/card-lot-01.jpg);
 }
 
-.card_type_book {
+.lots__card_type_book {
     background-image: url(../images/card-lot-02.jpg);
 }
 
-.card_type_picture {
+.lots__card_type_picture {
     background-image: url(../images/card-lot-03.jpg);
 }
+
 
 .card__title {
     color: #FFF;
     font-size: 22px;
     font-weight: 700;
     line-height: 120%;
-    z-index: 1;
-
-}
-
-.card-link {
+    /* 26.4px */
     text-transform: uppercase;
-    text-decoration-line: underline;
+    text-decoration: underline;
+    z-index: 1;
 }
+
 
 .card__text {
     color: #FFF;
     font-size: 20px;
+    font-style: normal;
     font-weight: 400;
     line-height: 120%;
+    /* 24px */
     z-index: 1;
 }
 
@@ -244,15 +297,18 @@
     margin-left: 40px;
     text-decoration: none;
     border-bottom: 1px solid black;
+    transition: all 0.2s;
+}
+
+.lots__look-more-link:hover {
+    opacity: 0.4;
 }
 
 /* Блок секция about */
 .about {
     margin: 0 auto;
     max-width: 1340px;
-    min-height: 487px;
     display: flex;
-    justify-content: space-between;
     gap: 25px;
 }
 
@@ -284,31 +340,29 @@
     align-self: flex-end;
 }
 
+/* Для выравнивания по Pixel-P пришлось изменить padding, отличается от размеров в FIGMA */
 .about__title {
-    margin-bottom: 100px;
+    padding: 104px 0 97px 0;
     font-size: 40px;
     font-weight: 700;
+    line-height: 1.2;
     text-transform: uppercase;
 }
 
+
 .about__text {
-    font-family: Raleway;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.about__paragraph {
     font-size: 20px;
     font-weight: 400;
     line-height: 1.2;
 }
 
-.about__text-list {
-    list-style-type: none;
-}
 
-.about__text-list-item {
-    margin-bottom: 25px;
-}
-
-.about__text-list-item:last-of-type {
-    margin: 0;
-}
 
 /* Блок секция footer */
 .footer {
@@ -329,6 +383,11 @@
     font-weight: 400;
     line-height: 1.2;
     text-decoration: none;
+    transition: all 0.2s;
+}
+
+.footer__menu-link:hover {
+    opacity: 0.4;
 }
 
 .footer__social-list {
@@ -339,6 +398,11 @@
 
 .footer__social-link {
     text-decoration: none;
+    transition: all 0.2s;
+}
+
+.footer__social-link:hover {
+    opacity: 0.4;
 }
 
 .footer__social-icon {
